--- a/MY PROJECT/PJ/PORTFOLIO/public_html/PROJECT.html
+++ b/MY PROJECT/PJ/PORTFOLIO/public_html/PROJECT.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with JohnDoe landing page.">
+    <meta name="description" content="PORTFOLIO.">
     <meta name="author" content="Devcrud">
     <title>portfolio</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
-	<link rel="stylesheet" href="assets/css/johndoe.css">
+	<link rel="stylesheet" href="PROJECT.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     <header class="header">
@@ -59,7 +59,7 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Front-End Designer / Developer and a Graphic Designer</h5>
-                <p class="mt-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit.sit amet, Qui deserunt consequatur fugit repellendusillo voluptas?</p>
+                <p class="mt-20">I am a front-end web developer. I can provide clean code and good designs. I also make the website more & more interactive. A responsive design makes your website accessible to all users, regarrdless of their device.</p>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
@@ -107,7 +107,7 @@
                             </div>
                             <div class="card-body px-4 py-3">
                                 <h5 class="mb-3 card-title text-dark">Front-End Developing</h5>
-                                <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam commodi provident, dolores reiciendis enim pariatur error optio, tempora ex, nihil nesciunt! In praesentium sunt commodi, unde ipsam ex veritatis laboriosam dolor asperiores suscipit blanditiis, dignissimos quos nesciunt nulla aperiam officia.</P>
+                                <P class="subtitle">Every website should be built with two primary goals: Firstly, it needs to work across all devices.Secondly, it needs to be fast as possible.</p>
                             </div>
                         </div>
                     </div>
